// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Floating Action Toolbar Snapshots renders a FAT with one button 1`] = `
.emotion-3 {
  border-top: solid 1px #dfe2e6;
  background: #ffffff;
  padding: 16px;
  box-shadow: 0 -2px 4px rgba(0,0,0,0.08);
}

@media (max-width:575px) {
  .emotion-3 {
    padding: 8px;
  }
}

.emotion-2 {
  display: inline-block;
  padding: 0 24px;
}

.emotion-2 *:not(:first-child) {
  margin-left: 16px;
}

@media (max-width:575px) {
  .emotion-2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 8px;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }

  .emotion-2 > * {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .emotion-2 > *:not(:first-child) {
    margin-right: 16px;
    margin-left: 0;
  }
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  background-color: #ffa126;
  border-color: #ffa126;
  color: #ffffff;
  height: 40px;
  padding: 0 32px;
  min-width: 112px;
  max-width: 288px;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1:active,
.emotion-1:hover:active {
  background-color: #ffa126;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-1:focus,
.emotion-1:hover:focus {
  background-color: #ffa126;
  border-color: #005cb9;
  color: #ffffff;
}

.emotion-1:hover {
  background-color: #f38b00;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: #fcd49f;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  -webkit-animation: animation-1lvxwzr 100ms;
  animation: animation-1lvxwzr 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 1px #005cb9;
}

.emotion-0 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 500;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 14px;
}

.emotion-0:hover:active {
  background-color: transparent;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
  >
    <button
      className="emotion-1"
    >
      <span
        className="emotion-0"
      >
        Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Floating Action Toolbar Snapshots renders a FAT with two buttons 1`] = `
.emotion-5 {
  border-top: solid 1px #dfe2e6;
  background: #ffffff;
  padding: 16px;
  box-shadow: 0 -2px 4px rgba(0,0,0,0.08);
}

@media (max-width:575px) {
  .emotion-5 {
    padding: 8px;
  }
}

.emotion-4 {
  display: inline-block;
  padding: 0 24px;
}

.emotion-4 *:not(:first-child) {
  margin-left: 16px;
}

@media (max-width:575px) {
  .emotion-4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 8px;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }

  .emotion-4 > * {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .emotion-4 > *:not(:first-child) {
    margin-right: 16px;
    margin-left: 0;
  }
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  background-color: #ffa126;
  border-color: #ffa126;
  color: #ffffff;
  height: 40px;
  padding: 0 32px;
  min-width: 112px;
  max-width: 288px;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1:active,
.emotion-1:hover:active {
  background-color: #ffa126;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-1:focus,
.emotion-1:hover:focus {
  background-color: #ffa126;
  border-color: #005cb9;
  color: #ffffff;
}

.emotion-1:hover {
  background-color: #f38b00;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: #fcd49f;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  -webkit-animation: animation-1lvxwzr 100ms;
  animation: animation-1lvxwzr 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 1px #005cb9;
}

.emotion-0 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 500;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 14px;
}

.emotion-0:hover:active {
  background-color: transparent;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  background-color: #f0f1f2;
  border-color: #ced3d9;
  color: #333333;
  height: 40px;
  padding: 0 32px;
  min-width: 112px;
  max-width: 288px;
}

.emotion-3:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-3:disabled,
.emotion-3:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-3:active,
.emotion-3:hover:active {
  background-color: #f0f1f2;
  border-color: #ced3d9;
  color: #333333;
}

.emotion-3:focus,
.emotion-3:hover:focus {
  background-color: #f0f1f2;
  border-color: #005cb9;
  color: #333333;
}

.emotion-3:hover {
  background-color: #ced3d9;
  border-color: #a1aab3;
  color: #333333;
}

.emotion-3:disabled,
.emotion-3:active:disabled,
.emotion-3:focus:disabled,
.emotion-3:hover:disabled {
  background-color: #ffffff;
  border-color: #ced3d9;
  color: #ced3d9;
}

.emotion-3:not([disabled]):focus,
.emotion-3:not([disabled]):active {
  -webkit-animation: animation-1lvxwzr 100ms;
  animation: animation-1lvxwzr 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 1px #005cb9;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
  >
    <button
      className="emotion-1"
    >
      <span
        className="emotion-0"
      >
        Button
      </span>
    </button>
    <button
      className="emotion-3"
    >
      <span
        className="emotion-0"
      >
        Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Floating Action Toolbar Snapshots renders a fixed FAT with one button 1`] = `
.emotion-2 {
  display: inline-block;
  padding: 0 24px;
}

.emotion-2 *:not(:first-child) {
  margin-left: 16px;
}

@media (max-width:575px) {
  .emotion-2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 8px;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }

  .emotion-2 > * {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .emotion-2 > *:not(:first-child) {
    margin-right: 16px;
    margin-left: 0;
  }
}

.emotion-3 {
  border-top: solid 1px #dfe2e6;
  background: #ffffff;
  padding: 16px;
  box-shadow: 0 -2px 4px rgba(0,0,0,0.08);
  position: fixed;
  left: 0;
  bottom: 0;
  right: 0;
}

@media (max-width:575px) {
  .emotion-3 {
    padding: 8px;
  }
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  background-color: #ffa126;
  border-color: #ffa126;
  color: #ffffff;
  height: 40px;
  padding: 0 32px;
  min-width: 112px;
  max-width: 288px;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1:active,
.emotion-1:hover:active {
  background-color: #ffa126;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-1:focus,
.emotion-1:hover:focus {
  background-color: #ffa126;
  border-color: #005cb9;
  color: #ffffff;
}

.emotion-1:hover {
  background-color: #f38b00;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: #fcd49f;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  -webkit-animation: animation-1lvxwzr 100ms;
  animation: animation-1lvxwzr 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 1px #005cb9;
}

.emotion-0 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 500;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 14px;
}

.emotion-0:hover:active {
  background-color: transparent;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
  >
    <button
      className="emotion-1"
    >
      <span
        className="emotion-0"
      >
        Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Floating Action Toolbar Snapshots renders a fixed FAT with two buttons 1`] = `
.emotion-4 {
  display: inline-block;
  padding: 0 24px;
}

.emotion-4 *:not(:first-child) {
  margin-left: 16px;
}

@media (max-width:575px) {
  .emotion-4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 8px;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }

  .emotion-4 > * {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .emotion-4 > *:not(:first-child) {
    margin-right: 16px;
    margin-left: 0;
  }
}

.emotion-5 {
  border-top: solid 1px #dfe2e6;
  background: #ffffff;
  padding: 16px;
  box-shadow: 0 -2px 4px rgba(0,0,0,0.08);
  position: fixed;
  left: 0;
  bottom: 0;
  right: 0;
}

@media (max-width:575px) {
  .emotion-5 {
    padding: 8px;
  }
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  background-color: #ffa126;
  border-color: #ffa126;
  color: #ffffff;
  height: 40px;
  padding: 0 32px;
  min-width: 112px;
  max-width: 288px;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1:active,
.emotion-1:hover:active {
  background-color: #ffa126;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-1:focus,
.emotion-1:hover:focus {
  background-color: #ffa126;
  border-color: #005cb9;
  color: #ffffff;
}

.emotion-1:hover {
  background-color: #f38b00;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: #fcd49f;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  -webkit-animation: animation-1lvxwzr 100ms;
  animation: animation-1lvxwzr 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 1px #005cb9;
}

.emotion-0 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 500;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 14px;
}

.emotion-0:hover:active {
  background-color: transparent;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  background-color: #f0f1f2;
  border-color: #ced3d9;
  color: #333333;
  height: 40px;
  padding: 0 32px;
  min-width: 112px;
  max-width: 288px;
}

.emotion-3:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-3:disabled,
.emotion-3:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-3:active,
.emotion-3:hover:active {
  background-color: #f0f1f2;
  border-color: #ced3d9;
  color: #333333;
}

.emotion-3:focus,
.emotion-3:hover:focus {
  background-color: #f0f1f2;
  border-color: #005cb9;
  color: #333333;
}

.emotion-3:hover {
  background-color: #ced3d9;
  border-color: #a1aab3;
  color: #333333;
}

.emotion-3:disabled,
.emotion-3:active:disabled,
.emotion-3:focus:disabled,
.emotion-3:hover:disabled {
  background-color: #ffffff;
  border-color: #ced3d9;
  color: #ced3d9;
}

.emotion-3:not([disabled]):focus,
.emotion-3:not([disabled]):active {
  -webkit-animation: animation-1lvxwzr 100ms;
  animation: animation-1lvxwzr 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 1px #005cb9;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
  >
    <button
      className="emotion-1"
    >
      <span
        className="emotion-0"
      >
        Button
      </span>
    </button>
    <button
      className="emotion-3"
    >
      <span
        className="emotion-0"
      >
        Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Floating Action Toolbar Snapshots renders a fixed empty FAT 1`] = `
.emotion-0 {
  display: inline-block;
  padding: 0 24px;
}

.emotion-0 *:not(:first-child) {
  margin-left: 16px;
}

@media (max-width:575px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 8px;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }

  .emotion-0 > * {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .emotion-0 > *:not(:first-child) {
    margin-right: 16px;
    margin-left: 0;
  }
}

.emotion-1 {
  border-top: solid 1px #dfe2e6;
  background: #ffffff;
  padding: 16px;
  box-shadow: 0 -2px 4px rgba(0,0,0,0.08);
  position: fixed;
  left: 0;
  bottom: 0;
  right: 0;
}

@media (max-width:575px) {
  .emotion-1 {
    padding: 8px;
  }
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`Floating Action Toolbar Snapshots renders an empty FAT 1`] = `
.emotion-1 {
  border-top: solid 1px #dfe2e6;
  background: #ffffff;
  padding: 16px;
  box-shadow: 0 -2px 4px rgba(0,0,0,0.08);
}

@media (max-width:575px) {
  .emotion-1 {
    padding: 8px;
  }
}

.emotion-0 {
  display: inline-block;
  padding: 0 24px;
}

.emotion-0 *:not(:first-child) {
  margin-left: 16px;
}

@media (max-width:575px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 8px;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }

  .emotion-0 > * {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .emotion-0 > *:not(:first-child) {
    margin-right: 16px;
    margin-left: 0;
  }
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  />
</div>
`;
